@@ -4,11 +4,11 @@ public class MyLinkedListTest3 {
   public static void main(String[] args) {
     MyLinkedList<String> list = new MyLinkedList<>();
 
-    list.add("aaa");
-    list.add("bbb");
-    list.add("ccc");
-    list.add("ddd");
-    //list.add(new Integer(100)); // 컴파일 오류!
+    list.add("aaa"); // aaa
+    list.add("bbb"); // aaa, bbb
+    list.add("ccc"); // aaa, bbb, ccc
+    list.add("ddd"); // aaa, bbb, ccc, ddd
+    //list.add(Integer.valueOf(100)); // 컴파일 오류!
 
     System.out.println(list.get(0));
     System.out.println(list.get(1));
@@ -44,20 +44,36 @@ public class MyLinkedListTest3 {
     System.out.println(list.set(1, "xxx")); // aaa, xxx, eee, ddd, ggg
     print(list);
 
-    System.out.println(list.set(0, "yyy")); // aaa, xxx, eee, ddd, ggg
+    System.out.println(list.set(0, "yyy")); // yyy, xxx, eee, ddd, ggg
     print(list);
 
-    System.out.println(list.set(4, "zzz")); // aaa, xxx, eee, ddd, ggg
+    System.out.println(list.set(4, "zzz")); // aaa, xxx, eee, ddd, zzz
     print(list);
 
     System.out.println("---------------------");
 
-    print2(list.toArray());
+    // => 복사할 항목의 개수 만큼 배열을 만들어 전달하면 
+    //    ArrayList는 새 배열을 만들지 않고 우리가 준 배열에 값을 담아 준다.
+    String[] arr = new String[list.size()];
+    String[] arr2 = list.toArray(arr);
+    System.out.println(arr == arr2);
+    print2(arr);
 
     System.out.println("---------------------");
 
-    print3(list);
 
+    // => 복사할 항목의 개수 보다 작은 크기의 배열을 주면
+    //    ArrayList는 새 배열을 만들어 값을 복사한 다음 리턴한다.
+    arr = new String[3];
+    arr2 = list.toArray(arr);
+    System.out.println(arr == arr2);
+    print2(arr2);
+
+    System.out.println("---------------------");
+
+    // => 복사할 항목의 개수 보다 작은 크기의 배열을 줄 때 보통 다음과 같이 코드를 작성한다.
+    arr2 = list.toArray(new String[] {});
+    print2(arr2);
   }
 
   static void print(MyLinkedList<String> list) {
@@ -73,31 +89,4 @@ public class MyLinkedListTest3 {
     }
     System.out.println();
   }
-
-  static void print3(MyLinkedList<String> list) {
-    // => 복사할 항목의 개수 만큼 배열을 만들어 전달하면 
-    //    ArrayList는 새 배열을 만들지 않고 우리가 준 배열에 값을 담아 준다.
-    //String[] arr = new String[list.size()];
-    //String[] arr2 = list.toArray(arr);
-
-    // => 복사할 항목의 개수 보다 작은 크기의 배열을 주면
-    //    ArrayList는 새 배열을 만들어 값을 복사한 다음 리턴한다.
-    //String[] arr = new String[2];
-    //String[] arr2 = list.toArray(arr);
-
-    // => 보통 다음 방식으로도 개발자들이 많이 사용한다.
-    String[] arr2 = list.toArray(new String[] {});
-
-    //System.out.println(arr == arr2);
-
-    for (Object obj : arr2) {
-      System.out.print(obj + ",");
-    }
-    System.out.println();
-  }
 }
-
-
-
-
-
