@@ -7,23 +7,29 @@ public class MyStackTest3 {
     stack.push("bbb");
     stack.push("ccc");
     stack.push("ddd");
-    stack.push("eee"); // aaa,bbb,ccc,ddd,eee
-    //stack.push(new Integer(100)); // 컴파일 오류!
+    stack.push("eee");
+    //stack.push(Integer.valueOf(100)); // 컴파일 오류!
     print(stack);
 
-    MyStack<String> stack2 = stack.clone();// aaa,bbb,ccc,ddd,eee
+    System.out.println("---------------------------");
+
+    MyStack<String> stack2 = stack.clone();
+    stack2.pop();
+    stack2.pop();
     print(stack2);
+    System.out.println("---------------------------");
 
-    System.out.println(stack2.pop()); // eee
-    System.out.println(stack2.pop()); // ddd
-    System.out.println(stack2.pop()); // ccc
-    print(stack2); // aaa,bbb
+    while (!stack2.empty()) {
+      System.out.println(stack2.pop());
+    }
 
-    System.out.println("-----------------");
+    System.out.println("---------------------------");
+
     print(stack);
-
+    System.out.println("---------------------------");
   }
-  static void print(MyStack<?> stack) {
+
+  static void print(MyStack<String> stack) {
     for (int i = 0; i < stack.size(); i++) {
       System.out.print(stack.get(i) + ",");
     }
